# Niners-War-Room

./: .env.example  .gitignore  AGENTS.md  DATA_MODEL.md  MISSION.md  MODEL_SPEC.md  README.md  RUN_POLICY.md  TASK_QUEUE.md  USER_WORKFLOW.md  index.html  pyproject.toml  requirements.txt
app/: main.py  navigation.py
config/: api_source_permissions.csv  nwr_scoring_rules_nwr_1qb_nonppr_fd_v1.json  source_registry.csv
scripts/: apply_truth_set_safe_inputs_preview.py  audit_truth_set_lab_v2_preview.py  audit_truth_set_lab_v3_preview.py  backfill_active_pack_public_veteran_model.py  build_draft_prep_data_foundation.py  build_model_edge_evaluation_harness.py  build_model_v4_confidence_missingness.py  build_model_v4_current_value_checkpoint.py  build_model_v4_decision_board_validation.py  build_model_v4_depth_chart_may22_snapshot.py  build_model_v4_draft_capital_2026_snapshot.py  build_model_v4_evidence_matrices.py  build_model_v4_export_summary_index.py  build_model_v4_fantasypros_advanced_intake.py  build_model_v4_fantasypros_identity_mapping.py  build_model_v4_first_down_canonicalization.py  build_model_v4_formula_contract.py  build_model_v4_full_board_rankings_exports.py  build_model_v4_historical_similarity.py  build_model_v4_human_decision_review_prep.py  build_model_v4_identity_team_repair_audit.py  build_model_v4_lifecycle_archetype.py  build_model_v4_mature_rookie_miss_patterns.py  build_model_v4_model_edge_queue.py  build_model_v4_player_identity_crosswalk.py  build_model_v4_player_rank_explainer.py  build_model_v4_preview.py  build_model_v4_qb_te_current_value.py  (+115 more)
(+1178 files in other folders)
