[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "niners-war-room"
version = "0.1.0"
description = "Local-first fantasy football dynasty war room."
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "pydantic",
  "streamlit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
